# lamzu-aurora-tauri

./: .gitignore  .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
packaging/: 99-lamzu.rules
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  device.rs  lib.rs  main.rs  profile.rs
src/app/: app.tsx  main.tsx
src/components/: CustomizationTab.tsx  GeneralSettings.tsx  Logo.tsx  MouseDiagram.tsx  Stat.tsx  WindowControls.tsx
src/components/ui/: button.tsx  input.tsx  select.tsx
src/features/customization/: index.ts
src/features/customization/components/: customization-tab.tsx  macro-list.tsx  macro-recorder.tsx  macros-card.tsx  mouse-diagram.tsx
src/features/general-settings/: index.ts
src/features/general-settings/components/: dpi-stages.tsx  general-settings.tsx
src/hooks/: use-device.ts  useDevice.ts
src/lib/: api.ts  battery.ts  button-actions.ts  constants.ts  macros.ts  profile-utils.ts
